# musen

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  DEVELOPERS  LICENSE  README  README.md  musen.sln
.github/workflows/: build_linux.yml  build_windows.yml
CMusen/: CMusen.cpp  CMusen.rc  CMusen.vcxproj  resource.h
Databases/AgglomerateDatabase/: AgglomeratesDatabase.cpp  AgglomeratesDatabase.h  AgglomeratesDatabase.proto  AgglomeratesDatabase.vcxproj  AgglomeratesDatabase.vcxproj.filters
Databases/GeometriesDatabase/: GeometriesDatabase.cpp  GeometriesDatabase.h  GeometriesDatabase.proto  GeometriesDatabase.vcxproj  GeometriesDatabase.vcxproj.filters
Databases/MaterialsDatabase/: BaseProperty.cpp  BaseProperty.h  Compound.cpp  Compound.h  ConstProperty.cpp  ConstProperty.h  Correlation.cpp  Correlation.h  DefinesMDB.h  Interaction.cpp  Interaction.h  MaterialsDatabase.cpp  MaterialsDatabase.h  MaterialsDatabase.proto  MaterialsDatabase.vcxproj  MaterialsDatabase.vcxproj.filters  Mixture.cpp  Mixture.h  TPProperty.cpp  TPProperty.h
ExternalLibraries/: CompileProtobuf.ps1  CompileZLib.ps1  RunProtobufCompile.bat  RunZLibCompile.bat
GeneralFunctions/: ByteStream.h  GeneratorComponent.h  GeometricFunctions.h  MUSENStringFunctions.h  MUSENVectorFunctions.h  Matrix3.h  MixedFunctions.h  Quaternion.h  RealGeometry.cpp  RealGeometry.h  STLFileHandler.cpp  STLFileHandler.h  SafeWindowsHeader.h  Triangle.h  UnitConvertor.cpp  UnitConvertor.h  Vector3.h
GeneralFunctions/MUSEN/: AbstractDEMModel.cpp  AbstractDEMModel.h  AnalysisVolume.cpp  AnalysisVolume.h  BaseGeometry.cpp  BaseGeometry.h  BasicGPUFunctions.cuh  BasicTypes.h  GeometryMotion.cpp  GeometryMotion.h  GeometrySizes.cpp  GeometrySizes.h  MUSENComponent.h  MUSENDefinitions.h  MUSENFileFunctions.h  MUSENGeneralSources.vcxproj  MUSENGeneralSources.vcxproj.filters  MeshGenerator.h  ModelManager.cpp  ModelManager.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  TriangularMesh.cpp  TriangularMesh.h
GeneralFunctions/SimResultsStorage/: ClearSpecificTimePoints.cpp  ClearSpecificTimePoints.h  CollisionsStorage.cpp  CollisionsStorage.h  DemStorage.cpp  DemStorage.h  ExportAsText.cpp  ExportAsText.h  ExportAsTextMacro.h  FileHandler.cpp  ImportFromText.cpp  ImportFromText.h  MDEMFile.cpp  MDEMFile.h  ProtoFunctions.h  SimResultsStorage.vcxproj  SimulationDescription.proto  TimePointR.cpp  TimePointR.h  TimePointW.cpp  TimePointW.h
Installers/Data/: MUSEN.ini
Installers/InstallerProject/: Installer.vcxproj  Script.bat  make_installer.ps1
Installers/Scripts/: ConfigINI.iss  Documentation.iss  Examples.iss  Main.iss  MainFiles.iss  ModelsCreator.iss  QtLibs.iss
Installers/WSLBuild/: WSLBuild.props  WSLBuild.targets  WSLBuild.vcxproj  WSLBuild.xml  build_in_wsl.bat  build_in_wsl.ps1  build_in_wsl.sh
MUSEN/BuildVersion/: BuildVersion.h  MUSENVersion.h  generate_build_version.bat  generate_build_version.sh
MUSEN/CMusen/: CMusen.cpp  CMusen.rc  CMusen.vcxproj  CMusen.vcxproj.filters  testScript.txt
MUSEN/MUSEN/: musen.sln
MUSEN/PropertySheets/: MusenCommonDebug.props  MusenCommonPath.props  MusenCommonQtPath.props  MusenCommonRelease.props
MUSEN/QT_GUI/: QT_GUI.vcxproj  QT_GUI.vcxproj.filters  main.cpp  qt_gui.qrc  resources.rc  version.h
MUSEN_Linux/: CMakeLists.txt  assemble_gui.sh  common_config.sh  compile_on_centos7.sh  compile_on_host.sh  copy_source_files.sh  eol_fix_sh.sh  generate_hash_header.sh  generate_time_header.sh  install_cmake.sh  install_cmake_centos7.sh  install_cmake_local.sh  install_cuda.sh  install_cuda_centos7.sh  install_cuda_local.sh  install_gcc.sh  install_gcc_centos7.sh  install_prerequisites_centos7.sh  install_prerequisites_host.sh  install_prerequisites_local.sh  install_protobuf.sh  install_protobuf_centos7.sh  install_protobuf_local.sh  install_qt.sh  install_qt_centos7.sh  install_qt_local.sh  install_zlib.sh  install_zlib_centos7.sh  install_zlib_local.sh  linux_copy_files.sh  linux_update_build_time.sh  make_musen_centos7.sh  make_musen_host.sh  make_musen_local.sh  musen.sh
MUSEN_Linux/LinuxBuildWSL/: LinuxBuildWSL.vcxproj
MUSEN_Linux/ProjectScripts/: compile_via_wsl.ps1  linux_build.props  linux_build.targets  linux_build.xml  run_compile_via_wsl.bat
Modules/BondsGenerator/: BondsGenerator.cpp  BondsGenerator.vcxproj
Modules/ContactAnalyzers/: ContactAnalyzers.vcxproj  ContactCalculator.h  InsideVolumeChecker.cpp  VerletList.cpp  VerletList.h
Modules/FileManager/: FileConverter.cpp  FileManager.vcxproj  FileMerger.cpp  FileMerger.h
Modules/GeneralSources/: AbstractDEMModel.cpp  BasicGPUFunctions.cuh  BasicTypes.h  DisableWarningHelper.h  GeneralSources.vcxproj  GeneralSources.vcxproj.filters  GeometricFunctions.h  MUSENDefinitions.h  MUSENFileFunctions.h  MUSENHelperDefines.h  MUSENStringFunctions.h  MUSENfilesystem.h  MixedFunctions.h  ModelManager.cpp  ModelManager.h  Quaternion.h  ThreadTask.h  UnitConvertor.cpp  Vector3.h
Modules/Geometries/: AnalysisVolume.h  BaseGeometry.cpp  Geometries.vcxproj  GeometryMotion.cpp  GeometryMotion.h  MeshGenerator.cpp  RealGeometry.cpp  RealGeometry.h  STLFileHandler.cpp  STLFileHandler.h  TriangularMesh.cpp  TriangularMesh.h
MusenGUI/: CMakeLists.txt  MusenGUI.vcxproj  MusenGUI.vcxproj.filters  main.cpp  musengui.qrc  resource.h  resources.rc
MusenGUI/MusenGUI/: musengui.ui
MusenGUI/shaders/: AxisFragCore.glsl  BondFragCore.glsl  DiscFragCompatibility.glsl  DiscVertCompatibility.glsl  DiscVertCore.glsl  OrientationFragCore.glsl  ParticleFragCompatibility.glsl  ParticleFragCore.glsl  PeriodicVertCompatibility.glsl  VolumeVertCompatibility.glsl  WallVertCore.glsl  fSphereShader.glsl
PropertySheets/: MusenCommonDebug.props  MusenCommonPath.props  MusenCommonQtPath.props  MusenCommonRelease.props
Version/: BuildHash.h  BuildTime.h  MUSENVersion.h  generate_build_version.bat  generate_build_version.ps1  generate_build_version.sh
scripts/: build_on_centos7.sh  build_protobuf.sh  build_zlib.sh  copy_to_home.sh  install_cuda.sh  install_gcc.sh  rebuild_with_copy.txt
(+775 files in other folders)
